kubernetes/deployment-back.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: back
  namespace: production
  labels:
    app: back
    account.name: pasechnik_lab
spec:
  replicas: 3
  selector:
    matchLabels:
      app: back
  template:
    metadata:
      labels:
        app: back
    spec:
      containers:
        - name: back
          image: 'registry.gitlab.com/blackit/cra-backend:latest'
          ports:
            - containerPort: 4060
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 40
      dnsPolicy: ClusterFirst
      securityContext: {}
      imagePullSecrets:
        - name: cra-backend
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
      maxSurge: 50%
