kubernetes/deployment-cfr-o.yml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: front
  namespace: blackit
  selfLink: /apis/extensions/v1beta1/namespaces/blackit/deployments/front
  uid: 29d09865-689c-11e8-8ec9-42010a80027d
  resourceVersion: '2742573'
  generation: 17
  creationTimestamp: '2018-06-05T08:40:56Z'
  labels:
    app: front
    io.codefresh.account.name: pasechnik_lab
    io.codefresh.auto-generated: 26110bcb-71d9-469b-ac30-76a9ece82533
    io.codefresh.generated-at: '1528188056039'
    io.codefresh.pipeline.id: 5b1e597e29b6d057e324e51a
    io.codefresh.pipeline.name: blackit-cra-boilerplate-cra-boilerplate
    io.codefresh.process.id: 5b1e9b7df9584f00015c7584
    io.codefresh.scm.branch: master
    io.codefresh.scm.revision: 2bb210dda322cad762fbde604c6e1e869636b4de
  annotations:
    deployment.kubernetes.io/revision: '14'
    kubectl.kubernetes.io/last-applied-configuration: >
      {"apiVersion":"extensions/v1beta1","kind":"Deployment","metadata":{"annotations":{"deployment.kubernetes.io/revision":"13"},"generation":14,"labels":{"app":"front","io.codefresh.account.name":"pasechnik_lab","io.codefresh.auto-generated":"26110bcb-71d9-469b-ac30-76a9ece82533","io.codefresh.generated-at":"1528188056039","io.codefresh.pipeline.id":"5b1e597e29b6d057e324e51a","io.codefresh.pipeline.name":"blackit-cra-boilerplate-cra-boilerplate","io.codefresh.process.id":"5b1e9b7df9584f00015c7 [...]
      has minimum
      availability.","reason":"MinimumReplicasAvailable","status":"True","type":"Available"}],"observedGeneration":14,"readyReplicas":3,"replicas":3,"updatedReplicas":3}}
spec:
  replicas: 2
  selector:
    matchLabels:
      app: front
      io.codefresh.auto-generated: 26110bcb-71d9-469b-ac30-76a9ece82533
      io.codefresh.generated-at: '1528188056039'
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: front
        io.codefresh.auto-generated: 26110bcb-71d9-469b-ac30-76a9ece82533
        io.codefresh.generated-at: '1528188056039'
      annotations:
        forceRedeployUniqId: e8179ef9-6b8a-406b-84f6-739cc67ddcbc
        forceRedeployUniqueId: '1528732696862'
    spec:
      containers:
        - name: front
          image: 'r.cfcr.io/pasechnik_lab/blackit/craboilerplate:master'
          ports:
            - containerPort: 80
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 40
      dnsPolicy: ClusterFirst
      securityContext: {}
      imagePullSecrets:
        - name: codefresh-generated-r.cfcr.io-cfcr-blackit
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
      maxSurge: 50%
status:
  observedGeneration: 17
  replicas: 2
  updatedReplicas: 2
  readyReplicas: 2
  availableReplicas: 2
  conditions:
    - type: Available
      status: 'True'
      lastUpdateTime: '2018-06-27T10:25:17Z'
      lastTransitionTime: '2018-06-27T10:25:17Z'
      reason: MinimumReplicasAvailable
      message: Deployment has minimum availability.
