kubernetes/deployment-sam.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cra-boilerplate-front
  labels:
    app: cra-boilerplate
spec:
  replicas: 3
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
      - name: cra-front
        image: nginx:1.7.9
        ports:
        - containerPort: 80
