kubernetes/service-back.yml
kind: Service
apiVersion: v1
metadata:
  name: back
  namespace: production
  labels:
    app: back
    account.name: pasechnik_lab
spec:
  ports:
    - name: http1
      protocol: TCP
      port: 80
      targetPort: 4060
  type: LoadBalancer
  selector:
    app: back
#      nodePort: 31184
#  externalIPs:
#  - 192.168.99.101
#  loadBalancerIP: 192.168.99.101
