kubernetes/service-cfr-o.yml
kind: Service
apiVersion: v1
metadata:
  name: front
  namespace: blackit
  selfLink: /api/v1/namespaces/blackit/services/front
  uid: 29b4dc83-689c-11e8-8ec9-42010a80027d
  resourceVersion: '895870'
  creationTimestamp: '2018-06-05T08:40:55Z'
  labels:
    io.codefresh.auto-generated: b3d7de6f-2736-49f1-b12d-03411c14b1ea
    io.codefresh.generated-at: '1528188055857'
spec:
  ports:
    - name: http1
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 31184
  selector:
    app: front
  clusterIP: 10.11.249.127
  type: LoadBalancer
  sessionAffinity: None
  externalTrafficPolicy: Cluster
status:
  loadBalancer:
    ingress:
      - ip: 35.225.83.1
