kubernetes/service.yml
kind: Service
apiVersion: v1
metadata:
  name: front
  namespace: production
  labels:
    app: front
    account.name: pasechnik_lab
spec:
  ports:
    - name: http1
      protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
  selector:
    app: front
#      nodePort: 31184
#  externalIPs:
#  - 192.168.99.101
#  loadBalancerIP: 192.168.99.101
